add endpoint getcreditByClientID
