# src/main/java/com/sgi/credit/domain/ports/in/CreditService.java
@@ -34,4 +34,6 @@ public interface CreditService {
     Flux<TransactionResponse> getClientTransactions(String creditId);
 
     Mono<TransactionResponse> chargeCreditCard(String idCredit, Mono<ChargeRequest> chargeRequestMono);
+
+    Flux<CreditResponse> getCreditCardByClientId(String clientId);
 }
